# custom-co-correcting

./: BasicTrainer.py  Co-Correcting.py  Custom-Co-Correcting-Diversity.py  Custom-Co-Correcting.py  Loss.py  README.md  pyproject.toml
dataset/: ISIC.py  PatchCamelyon.py  PetSkin.py  mnist.py  new_PetSkin.py  utils.py
dataset/preprocess/: count.py  crop_bbox.py  crop_image_aware.py  dataset_preprocess.py  roi_stats.py  to_npy.py
models/: ConvNeXt.py  coteaching_model.py  densenet.py  preact_resnet.py  resnet.py  resnet_50.py
models/ConvNeXt/: ConvNeXt.py  ConvNeXt2.py  ConvNeXt2_asam.py  ConvNeXt_confusion.py  ConvNeXt_test.py
models/YOLOv8/: YOLOv8.py  YOLOv8_test.py
scripts/: final.sh  fr.sh  mydataset2.sh  mydatasets.sh  test.ps1  test_train_1.sh  test_train_2.sh  test_train_3.sh  test_train_4.sh
scripts/convnext/: convnext_baseline(failed).sh  convnext_check.sh  convnext_like_baseline.sh  convnext_test.sh
scripts/paramtune/: alpha.sh  convnext.sh  forget.sh  gradual.sh  lambda.sh
scripts/test/: final.sh  final_test.sh  final_test2.sh  final_test3.sh  fr.sh  test_train_1.sh
utils/: asam.py  curriculum_clustering.py  label_checker.py  settings.py
