[project]
name = "custom-co-correcting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
